Removed head2 css block Testing to see if this fixes the glitch where all headers listed under head2 jump to GET List Exchange Surveys

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -407,15 +407,15 @@ html, body {
     padding-bottom: 1.2em;
   }
   
-  #head2 {
-    @extend %header-font;
-    font-size: 22px;
-    margin-top: 4em;
-    margin-bottom: 0;
-    border-top: 1px solid #ccc;
-    padding-top: 1.2em;
-    padding-bottom: 1.2em;
-  }
+//   #head2 {
+//     @extend %header-font;
+//     font-size: 22px;
+//     margin-top: 4em;
+//     margin-bottom: 0;
+//     border-top: 1px solid #ccc;
+//     padding-top: 1.2em;
+//     padding-bottom: 1.2em;
+//   }
   
   // HTTP tags in front of headers
   #post_tag {
